--- a/lab01/lab01.ipynb
+++ b/lab01/lab01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6e8e500e",
+   "id": "f535820a",
    "metadata": {},
    "source": [
     "# Importing libraries"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ee520fe6",
+   "id": "f499bbb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "868270d7",
+   "id": "efefc597",
    "metadata": {},
    "source": [
     "## Task 1"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "767619e3",
+   "id": "4ce36c24",
    "metadata": {},
    "source": [
     "$$\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b140461e",
+   "id": "251a8795",
    "metadata": {},
    "source": [
     "### Variables"
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "636d0cc7",
+   "id": "76b60cd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "343f1647",
+   "id": "e3c3e37e",
    "metadata": {},
    "source": [
     "### Define Functions"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "87104973",
+   "id": "023aee5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3901150f",
+   "id": "b652fe0e",
    "metadata": {},
    "source": [
     "### Model Initialization"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "88d2f1da",
+   "id": "b8bbc440",
    "metadata": {},
    "outputs": [
     {
@@ -235,6 +235,107 @@
     "    plt.xlabel('Value')\n",
     "    plt.ylabel('Frequency')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d4c4a5d7",
+   "metadata": {},
+   "source": [
+    "## Task 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f4a4080",
+   "metadata": {},
+   "source": [
+    "### Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d7c14666",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numOf = 10000\n",
+    "aArr = [0, 2, 4] \n",
+    "omegaArr = [1, 2, 3] \n",
+    "numBins = 30\n",
+    "alpha = 0.05"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "23c3d251",
+   "metadata": {},
+   "source": [
+    "### Define Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2e02b3a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def xsquareTest(rndNumbers, numBins, alpha):\n",
+    "    oFrequencies = np.histogram(rndNumbers, bins=numBins, density=True)[0]\n",
+    "    eFrequency = norm.pdf(np.linspace(-3, 3, numBins))\n",
+    "    xsqrStats = np.sum((oFrequencies - eFrequency) ** 2 / eFrequency)\n",
+    "    freedomDeg = numBins - 1\n",
+    "    xsqrCrit = chi2.ppf(1 - alpha, freedomDeg)\n",
+    "    return xsqrStats, xsqrCrit\n",
+    "\n",
+    "def calculateUi():\n",
+    "    xiArr = np.random.rand(12)\n",
+    "    return np.sum(xiArr - 6)\n",
+    "\n",
+    "def generateXArr(omega, a):\n",
+    "    mu = np.array([calculateUi() for _ in range(numOf)])\n",
+    "    return omega * mu + a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a9b16d0",
+   "metadata": {},
+   "source": [
+    "### Model Initialization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa94baa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for a in aArr:\n",
+    "    for omega in omegaArr:\n",
+    "        xArr = generateXArr(omega, a)\n",
+    "        average = np.mean(xArr)\n",
+    "        dispersion = np.var(xArr)\n",
+    "        xRange = np.linspace(min(xArr), max(xArr), 100)\n",
+    "        normal = norm.pdf(xRange, loc=average, scale=np.sqrt(dispersion))\n",
+    "        plt.hist(xArr, bins=numBins, density=True, alpha=0.6, label=f'omega:[{omega}] a:[{a}]')\n",
+    "        plt.plot(xRange, normal, 'o-', label=f'avg:[{mean}] sigma:[{np.sqrt(dispersion)}]')\n",
+    "        xsqrStats, xsqrCrit = xsquareTest(xArr, numBins, alpha)\n",
+    "    \n",
+    "        print(f'Omega is {omega} and A is {a}')\n",
+    "        print(f'XSquare: [{xsqrStats}, {xsqrCrit}]')\n",
+    "        \n",
+    "        if xsqrCrit >= xsqrStats:\n",
+    "            print('Distribution Match')\n",
+    "        else:\n",
+    "            print('Distibution Doesnt Match')\n",
+    "        \n",
+    "        plt.legend()\n",
+    "        plt.title(f'Histogram for omega={omega} and a={a}')\n",
+    "        plt.show()"
    ]
   }
  ],
